--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>StartupGraph</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600,400,300,400italic,300italic">
-  <link href="/bundle.css" rel="stylesheet"></head>
+  <link href="/StartupGraph/bundle.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  <script src="/bundle.js"></script></body>
+  <script src="/StartupGraph/bundle.js"></script></body>
 </html>
